--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGO_URI=mongodb+srv://fullstack:babircluffy1234@cluster0.cc2wvjb.mongodb.net/?retryWrites=true&w=majority
+SECRET=7c5f6a53b2ef1d4982e3465aaabdf87e
